Fix bleeding edges without padding

--- a/app/assets/stylesheets/_authenticating.scss
+++ b/app/assets/stylesheets/_authenticating.scss
@@ -2,7 +2,7 @@
   .github-signin, .thoughtbot-signin form, .signup-forgot {
     margin: auto;
     max-width: 400px;
-    padding: 0 1rem;
+    padding: 0 $side-padding;
   }
 
   .github-signin  {
