--- a/app/assets/stylesheets/_base-typography.scss
+++ b/app/assets/stylesheets/_base-typography.scss
@@ -179,6 +179,7 @@ hr {
 
 .subject {
   margin-bottom: 3em;
+  padding: 0;
   text-align: left;
   width: 85%;
 
