--- a/app/assets/stylesheets/_base-variables.scss
+++ b/app/assets/stylesheets/_base-variables.scss
@@ -88,3 +88,5 @@ $z-headhesive: 30;
 $z-table-of-contents: $z-headhesive + 1;
 
 $unicode-down-triangle: "\25BE";
+
+$side-padding: 1em;
