--- a/app/assets/stylesheets/layout/_header.scss
+++ b/app/assets/stylesheets/layout/_header.scss
@@ -3,12 +3,37 @@
   margin: 0 auto 40px;
   width: 100%;
   flex: none;
+
+  &.headhesive--stick,
+  &.without-hero {
+    .header-cta {
+      padding: 10px 0 10px 10px;
+
+      &:hover {
+        background-color: inherit;
+      }
+    }
+
+    .header-cta-link {
+      background-color: $hero-green;
+      border-radius: 3px;
+      height: $navigation-height - ($navigation-cta-offset * 2);
+      line-height: $navigation-height - ($navigation-cta-offset * 2);
+      padding: 0 1rem;
+
+      &:hover,
+      &:focus {
+        background-color: lighten($hero-green, 5%);
+      }
+    }
+  }
 }
 
 .header-container {
   @include user-select(none);
   @include outer-container;
   max-width: $max-width;
+  padding: 0 $side-padding;
   position: relative;
 
   .branding {
